Added nickel mining (no ore generation)